--- a/Assignment1/style.css
+++ b/Assignment1/style.css
@@ -2,12 +2,159 @@
 	margin-top: 40px;
 }
 
+h2{
+	text-align: center;
+	color: mediumseagreen;
+}
 
+p{
+	text-align: center;
+	color: purple;
+}
 
+a{
+	text-decoration: none;
+	text-transform: uppercase;
+}
 
+.section {
+	padding: 80px 0;
+}
 
+.person {
+	max-width: 270px;
+	text-align: center;
+}
+.person img {
+	width: 150px;
+	height: 150px;
+	margin: auto;
+}
+.person-content {
+	margin-top: 20px;
+}
+.person h4 {
+	font-weight: 400;
+}
+.person h5 {
+	color: #939393;
+	font-size: 13px;
+	font-weight: 700;
+	margin-bottom: 20px;
+}
+.social-icons, .footer .footer-share {
+	margin-top: 20px;
+}
+.social-icons li, .footer .footer-share li {
+	display: inline-block;
+	float: none;
+}
+.social-icons a, .footer .footer-share a {
+	border: 1px solid #8bc34a;
+	color: #8bc34a;
+	display: block;
+	font-size: 14px;
+	height: 32px;
+	line-height: 32px;
+	margin-right: 5px;
+	text-align: center;
+	width: 32px;
+}
+.social-icons a:hover {
+	background-color: #8bc34a;
+	border-color: #8bc34a;
+	color: #fff;
+}
 
-#index .row{
+.footer {
+	text-align: left;
+	background: #282828;
+	line-height: 22px;
+	color: #96968F;
+}
+footer.footer h2 {
+    margin-top: 40px !important;
+    font-size: 24px;
+    padding-bottom: 15px;
+    color: #8bc34a;
+}
+.footer a {
+	color: #648939;
+}
+.footer a:hover {
+	color: #8bc34a;
+}
+
+.conForm {
+	text-align: center;
+}
+.conForm h5 {
+	font-size: 30px;
+}
+.conForm p {
+	text-align: center;
+	margin: 7%;
+}
+.conForm input {
+	color: #797979;
+	padding: 15px 30px;
+	border: none;
+	margin-right: 3%;
+	margin-bottom: 30px;
+	outline: none;
+	font-style: normal;
+	border: #c1c1c1 1px solid;
+	font-size: 15px;
+}
+.conForm input.noMarr {
+	margin-right: 0px;
+}
+.conForm textarea {
+	color: #797979;
+	padding: 15px 30px;
+	margin-bottom: 18px;
+	outline: none;
+	height: 150px;
+	font-style: normal;
+	resize: none;
+	font-size: 15px;
+	border: none;
+	border: #c1c1c1 1px solid;
+}
+.conForm .submitBnt {
+	background: #8bc34a;
+	color: #070709;
+	margin-top: 30px;
+	padding:15px 30px 15px 30px;
+	font-size: 13px;
+	font-weight: 600;
+	letter-spacing: 5px;
+	border: 0;
+	-moz-border-radius: 2px;
+	-webkit-border-radius: 2px;
+	border-radius: 2px;
+	display: inline-block;
+	text-transform: uppercase;
+}
+.conForm .submitBnt:hover {
+	background: #282828;
+	color: #ffffff;
+}
+#success_page{
+	color: #00bdbd;
+	font-weight: 500;
+}
+.error_message{
+	color: #ff675f;
+	padding-bottom: 15px;
+	font-weight: 500;
+}
+#success_page h3{
+	font-size:17px;
+	color:#5ed07b;
+	font-weight: 700;
+}
+/*#index .row{
 	background: url("../Img/2.jpg") no-repeat center center;
 	background-size: cover;
 }
@@ -37,14 +184,6 @@ nav a:hover{
 	margin-bottom: 5px;
 	background-color: green;
 }
-h2{
-	text-align: center;
-	color: mediumseagreen;
-}
-p{
-	text-align: center;
-	color: purple;
-}
 img{
 	width: 100%;
 	height:auto;
@@ -61,4 +200,4 @@ footer .row{
 }
 #gallery{
 	margin-bottom: 20px;
-}
+}*/
