--- a/Assignment1/style.css
+++ b/Assignment1/style.css
@@ -18,7 +18,7 @@ a{
 }
 
 .section {
-	padding: 80px 0;
+	padding: 60px 0 25px;
 }
 
 .person {
@@ -97,7 +97,7 @@ footer.footer h2 {
 }
 .conForm input {
 	color: #797979;
-	padding: 15px 30px;
+	padding: 10px 25px;
 	border: none;
 	margin-right: 3%;
 	margin-bottom: 30px;
@@ -111,7 +111,7 @@ footer.footer h2 {
 }
 .conForm textarea {
 	color: #797979;
-	padding: 15px 30px;
+	padding: 10px 25px;
 	margin-bottom: 18px;
 	outline: none;
 	height: 150px;
@@ -122,14 +122,14 @@ footer.footer h2 {
 	border: #c1c1c1 1px solid;
 }
 .conForm .submitBnt {
-	background: #8bc34a;
-	color: #070709;
-	margin-top: 30px;
-	padding:15px 30px 15px 30px;
+	background: white;
+	color: #8bc34a;
+	margin-top: 8px;
+	padding:10px 20px 10px 25px;
 	font-size: 13px;
-	font-weight: 600;
+	font-weight: bolder;
 	letter-spacing: 5px;
-	border: 0;
+	border: #8bc34a 1px solid;
 	-moz-border-radius: 2px;
 	-webkit-border-radius: 2px;
 	border-radius: 2px;
@@ -137,8 +137,8 @@ footer.footer h2 {
 	text-transform: uppercase;
 }
 .conForm .submitBnt:hover {
-	background: #282828;
-	color: #ffffff;
+	background: #8bc34a;
+	color: white;
 }
 #success_page{
 	color: #00bdbd;
